--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "jquery": "^3.4.1",
     "ng-recaptcha": "^5.0.0",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.8.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
